--- a/prototype/Mybag.html
+++ b/prototype/Mybag.html
@@ -50,13 +50,13 @@
 					<img id="profile-picture" src="img/personal/avatar.png">
 				</div>
 				<div class= "link">
-					<a id="link1" href="personal.html" onclick="">Profile</a>
+					<a id="link1" href="profile.html" onclick="">Profile</a>
 					<a id="linkactive" href="Mybag.html" onclick="">My bag</a>
-					<a id="link3" href="favorite.html" onclick="">My favorite</a>
+					<a id="link3" href="following.html" onclick="">Following</a>
 				</div>
 			</div>
 			
-			<div class="col-md-9 infor">
+<div class="col-md-9 infor">
 				<h5 class="countItems"></h5> 
 				<div class="row list-item">
 					<div class="col-md-3">
@@ -74,17 +74,17 @@
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href=""><i class="fa fa-trash-o"></i></a>
+						<a href=""><i class="fa fa-trash-o" data-toggle="modal" data-target="#myModal"></i></a>
 					</div>
 					<hr>
 				</div>
 
 				<div class="row list-item">
 					<div class="col-md-3">
-						<a href=""> <img id="clothe2" src="img/personal/kaki-blaze.jpg"></a>
+						<a href="#"> <img id="clothe2" src="img/personal/rosemary-dress.jpg"></a>
 					</div>
 					<div class="col-md-3">
-						<a id="name" href=""><strong>Kaki Blaze Coat</strong></a>
+						<a id="name" href=""><strong>Rosemary Dress</strong></a>
 						<p class="price">250$</p>
 						<p class="state">Sold Out</p>
 					</div>
@@ -95,18 +95,17 @@
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href="#"><i class="fa fa-trash-o"></i></a>
+						<a href="#"><i class="fa fa-trash-o" data-toggle="modal" data-target="#myModal" ></i></a>
 					</div>
 					<hr>
 				</div>
 
-				<!--Copy -->
 				<div class="row list-item">
 					<div class="col-md-3">
-						<a href=""><img id="clothe1" src="img/personal/kaki-mangto.jpg"></a>
+						<a href="#"><img id="clothe1" src="img/personal/kaki-blaze.jpg"></a>
 					</div>
 					<div class="col-md-3">
-						<a id="name" href=""><strong>Kaki Mangto Coat</strong></a>
+						<a id="name" href=""><strong>Kaki Blaze Coat</strong></a>
 						<p class="price">100$</p>
 						<p class="state">In Stock</p>
 					</div>
@@ -117,17 +116,18 @@
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href=""><i class="fa fa-trash-o"></i></a>
+						<a href="#"><i class="fa fa-trash-o i" data-toggle="modal" data-target="#myModal"></i></a>
 					</div>
+
 					<hr>
 				</div>
 
 				<div class="row list-item">
 					<div class="col-md-3">
-						<a href=""> <img id="clothe2" src="img/personal/kaki-blaze.jpg"></a>
+						<a href="#"> <img id="clothe2" src="img/personal/softly-vee-sweater.jpg"></a>
 					</div>
 					<div class="col-md-3">
-						<a id="name" href=""><strong>Kaki Blaze Coat</strong></a>
+						<a id="name" href=""><strong>Softly Vee Sweater</strong></a>
 						<p class="price">250$</p>
 						<p class="state">Sold Out</p>
 					</div>
@@ -138,12 +138,26 @@
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href="#"><i class="fa fa-trash-o"></i></a>
+						<a href="#"><i class="fa fa-trash-o" data-toggle="modal" data-target="#myModal"></i></a>
 					</div>
 					<hr>
 				</div>
 
-
+				<!-- <confirm delete> -->
+				 <!-- Modal -->
+				  	<div class="modal fade" id="myModal" role="dialog">
+						<div class="modal-dialog">
+						
+						  <!-- Modal content-->
+							<div class="modal-content">
+								<div class="modal-header">
+								  <button type="button" class="close" data-dismiss="modal">&times;</button>
+								   <h4 >Are you sure you want to delete the product from your bag?</h4>
+								   <button type="button" class="btn btn-success" data-dismiss="modal" >Confirm</button>
+								 </div>
+							</div>
+						</div>
+					</div>
 
 			</div>				
 		</div>
