--- a/prototype/following.html
+++ b/prototype/following.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Favorite</title>
+	<title>Following</title>
 	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
@@ -50,9 +50,9 @@
 					<img id="profile-picture" src="img/personal/avatar.png">
 				</div>
 				<div class= "link">
-					<a id="link1" href="personal.html" onclick="">Profile</a>
+					<a id="link1" href="profile.html" onclick="">Profile</a>
 					<a id="link2" href="Mybag.html" onclick="">My bag</a>
-					<a id="linkactive" href="favorite.html" onclick="">My favorite</a>
+					<a id="linkactive" href="following.html" onclick="">Following</a>
 				</div>
 			</div>
 			
@@ -66,84 +66,102 @@
 						<a id="name" href=""><strong>Kaki Mangto Coat</strong></a>
 						<p class="price">100$</p>
 						<p class="state">In Stock</p>
+						<p class="sale"> Sale: 10%</p>
 					</div>
 					<div class="col-md-2">
-						<a class="btn " href="detailProduct.html">Details</a>
+						<a class="btn " href="detailProduct.html">Follow</a>
 					</div>
 					<div class="col-md-2">
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href=""><i class="fa fa-trash-o"></i></a>
+						<a href=""><i class="fa fa-trash-o" data-toggle="modal" data-target="#myModal"></i></a>
 					</div>
 					<hr>
 				</div>
 
 				<div class="row list-item">
 					<div class="col-md-3">
-						<a href=""> <img id="clothe2" src="img/personal/kaki-blaze.jpg"></a>
+						<a href="#"> <img id="clothe2" src="img/personal/rosemary-dress.jpg"></a>
+					</div>
+					<div class="col-md-3">
+						<a id="name" href=""><strong>Rosemary Dress</strong></a>
+						<p class="price">250$</p>
+						<p class="state">Sold Out</p>
+						<p class="sale"> Sale: 5%</p>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="detailProduct.html">Follow</a>
+					</div>
+					<div class="col-md-2">
+						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
+					</div>
+					<div class="col-md-2 icon">
+						<a href="#"><i class="fa fa-trash-o" data-toggle="modal" data-target="#myModal" ></i></a>
+					</div>
+					<hr>
+				</div>
+
+				<div class="row list-item">
+					<div class="col-md-3">
+						<a href="#"><img id="clothe1" src="img/personal/kaki-blaze.jpg"></a>
 					</div>
 					<div class="col-md-3">
 						<a id="name" href=""><strong>Kaki Blaze Coat</strong></a>
-						<p class="price">250$</p>
-						<p class="state">Sold Out</p>
-					</div>
-					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="detailProduct.html">Details</a>
-					</div>
-					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
-					</div>
-					<div class="col-md-2 icon">
-						<a href="#"><i class="fa fa-trash-o"></i></a>
-					</div>
-					<hr>
-				</div>
-
-				<!--Copy -->
-				<div class="row list-item">
-					<div class="col-md-3">
-						<a href=""><img id="clothe1" src="img/personal/kaki-mangto.jpg"></a>
-					</div>
-					<div class="col-md-3">
-						<a id="name" href=""><strong>Kaki Mangto Coat</strong></a>
 						<p class="price">100$</p>
 						<p class="state">In Stock</p>
+						<p class="sale"> Sale: 15%</p>
 					</div>
 					<div class="col-md-2">
-						<a class="btn " href="detailProduct.html">Details</a>
+						<a class="btn " href="detailProduct.html">Follow</a>
 					</div>
 					<div class="col-md-2">
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href=""><i class="fa fa-trash-o"></i></a>
+						<a href="#"><i class="fa fa-trash-o i" data-toggle="modal" data-target="#myModal"></i></a>
 					</div>
+
 					<hr>
 				</div>
 
 				<div class="row list-item">
 					<div class="col-md-3">
-						<a href=""> <img id="clothe2" src="img/personal/kaki-blaze.jpg"></a>
+						<a href="#"> <img id="clothe2" src="img/personal/softly-vee-sweater.jpg"></a>
 					</div>
 					<div class="col-md-3">
-						<a id="name" href=""><strong>Kaki Blaze Coat</strong></a>
+						<a id="name" href=""><strong>Softly Vee Sweater</strong></a>
 						<p class="price">250$</p>
 						<p class="state">Sold Out</p>
+						<p class="sale"> Sale: 15%</p>
 					</div>
 					<div class="col-md-2">
-						<a class="btn w3-margin-bottom" href="detailProduct.html">Details</a>
+						<a class="btn w3-margin-bottom" href="detailProduct.html">Follow</a>
 					</div>
 					<div class="col-md-2">
 						<a class="btn w3-margin-bottom" href="order.html">Buy Now</a>
 					</div>
 					<div class="col-md-2 icon">
-						<a href="#"><i class="fa fa-trash-o"></i></a>
+						<a href="#"><i class="fa fa-trash-o" data-toggle="modal" data-target="#myModal"></i></a>
 					</div>
 					<hr>
 				</div>
 
-
+				<!-- <confirm delete> -->
+				 <!-- Modal -->
+				  	<div class="modal fade" id="myModal" role="dialog">
+						<div class="modal-dialog">
+						
+						  <!-- Modal content-->
+							<div class="modal-content">
+								<div class="modal-header">
+								  <button type="button" class="close" data-dismiss="modal">&times;</button>
+								   <h4 >Are you sure you want to delete the product from following list?</h4>
+								   <button type="button" class="btn btn-success" data-dismiss="modal" >Confirm</button>
+								 </div>
+							</div>
+						</div>
+					</div>
 
 			</div>				
 		</div>
