--- a/prototype/profile.html
+++ b/prototype/profile.html
@@ -14,15 +14,15 @@
 	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
   	<script src="js/index.js"></script>
   	<script src="js/mybag.js"></script>
-  	<script src="js/personal.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/personal.css">
+  	<script src="js/profile.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/profile.css">
 	<link rel="stylesheet" type="text/css" href="css/mybag.css">
 
 </head>
 <body>	
 	<header>
 		<div class="user">
-			<span><a href="personal.html" id="loginform">Login</a> | <a href="index.html" id="registerform">Register</a></span>
+			<span><a href="profile.html" id="loginform">Login</a> | <a href="index.html" id="registerform">Register</a></span>
 			<a href="Mybag.html" class="hvr-icon-bounce glyphicon glyphicon-shopping-cart">
 			</a>
 		</div>
@@ -54,9 +54,9 @@
 					<img id="profile-picture" src="img/personal/avatar.png">
 				</div>
 				<div class= "link">
-					<a id="linkactive" href="personal.html" onclick="">Profile</a>
+					<a id="linkactive" href="profile.html" onclick="">Profile</a>
 					<a id="link2" href="Mybag.html" onclick="">My bag</a>
-					<a id="link3" href="favorite.html" onclick="">My favorite</a>
+					<a id="link3" href="following.html" onclick="">Following</a>
 				</div>
 			</div>
 
@@ -92,8 +92,7 @@
 				<div class="editButton">
 					<a class="btn" href="#"><i class="fa fa-pencil-square-o"></i>Edit Profile</a>
 				</div>	
-<!-- >>>>>> origin/master -->
-			</div>	
+
 		</div>		
 	</div>				
 		
